@@ -1,3 +1,9 @@
+2010-02-26  Eric Botcazou  <ebotcazou@adacore.com>
+
+	PR ada/43096
+	* tree-ssa-alias.c (same_type_for_tbaa): Return -1 if the types have
+	the same alias set.
+
 2010-02-26  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* config.gcc: Set the default arch at least to Prescott for
